Update to Hetzner regions, host backend
